Aula1010 Tratamento de Dados

--- a/react-basico/basic-app/src/components/AppViewer.module.css
+++ b/react-basico/basic-app/src/components/AppViewer.module.css
@@ -12,3 +12,15 @@
     font-size: 35px;
     color: blue;
 }
+.linhaCinza{
+    background-color: #333;
+    color: aliceblue;
+}
+.superTitulo{
+    background-color: gold;
+    color: black;
+}
+.normalTitulo{
+    background-color: silver;
+    color: black;
+}
